--- a/templates/user.html
+++ b/templates/user.html
@@ -1,12 +1,17 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html>
 <head>
     <title></title>
+    <link rel="stylesheet" type="text/css" href="{% static 'users/style.css' %}">
+    <link href="{% static 'css/bootstrap-fluid-adj.css' %}" rel="stylesheet">
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" media="screen">
+    <link href="{% static 'css/bootstrap-responsive.css' %}" rel="stylesheet">
 </head>
 <body>
 {% if users %}
-    {% for user in users %}
-        {{ user.name }}, {{ user. }}
+    {% for user in users%}
+        {{ for.loopcount }}
     {% endfor %}
 {% endif %}
 </body>
