--- a/templates/baidu.html
+++ b/templates/baidu.html
@@ -1,9 +1,92 @@
 <!DOCTYPE html>
+{% load static %}
 <html>
 <head>
-    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap -->
+    <link href="{% static 'bootstrap-3.2.0-dist/css/bootstrap.css' %}" rel="stylesheet" media="screen">
+    <title>水库地图</title>
 </head>
 <body>
-baiduMap welcome you!
+<nav class="navbar navbar-default" role="navigation">
+    <div class="navbar-header">
+        <a class="navbar-brand" href=".">水库水坝安全监测与运行管理系统</a>
+    </div>
+    <div>
+        <ul class="nav navbar-nav">
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">工程概况<b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                    <li><a href="#">xx</a></li>
+                    <li><a href="#">xx</a></li>
+                </ul>
+            </li>
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">监测资料管理<b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                    <li><a href="#">xx</a></li>
+                    <li><a href="#">xx</a></li>
+                </ul>
+            </li>
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">图形图表<b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                    <li><a href="#">浸润线</a></li>
+                    <li><a href="#">变形等值线</a></li>
+                    <li><a href="#">渗漏量</a></li>
+                    <li class="divider"></li>
+                    <li><a href="#">年报</a></li>
+                    <li><a href="#">月报</a></li>
+                    <li><a href="#">季报</a></li>
+                </ul>
+            </li>
+            <li><a href="#">Link</a></li>
+            <form class="navbar-form navbar-left" role="search">
+                <div class="form-group">
+                  <input type="text" class="form-control" placeholder="金牛湖水库">
+                </div>
+                <button type="button" id='search' class="btn btn-default">搜索</button>
+            </form>
+        </ul>
+    </div>
+</nav> <!--  导航结束-->
+
+    <div id='map'></div>
+
+    <script src="{% static  'js/jquery-1.11.1.min.js' %}" type="text/javascript"></script>
+    <script src="{% static  'bootstrap-3.2.0-dist/js/bootstrap.js' %}" type="text/javascript"></script>
+    <script src="http://api.map.baidu.com/api?v=1.5&ak=1X7pvebi8LwTizC7Rb7I7Lby" type="text/javascript"></script>
+    <script type="text/javascript">
+        $(function () {
+            // 创建地图实例
+            var map = new BMap.Map("map");
+            // 创建点坐标
+            var initPoint = new BMap.Point(118.86, 32.06);
+            // 初始化地图，设置中心点坐标和地图级别
+            map.centerAndZoom(initPoint, 13);
+            map.addControl(new BMap.NavigationControl());
+            var searchCount = 1;
+            $('#search').click(function(){
+                if (searchCount > 1) {
+                    console.log('一个箭头就够了');
+                    return;
+                };
+                searchCount ++;
+                var shuiKu = new BMap.Point(118.975053,32.47552);
+                var myIcon = new BMap.Icon(
+                        "{% static 'img/myicon.png' %}",
+                        new BMap.Size(26, 26),
+                        {offset: new BMap.Size(10, 25)});
+                var marker = new BMap.Marker(shuiKu, {icon: myIcon});
+                map.addOverlay(marker);
+                marker.setAnimation(BMAP_ANIMATION_BOUNCE);
+                marker.addEventListener("click", function(){
+                    this.openInfoWindow(
+                            new BMap.InfoWindow("<div style='width: 610px; height: 340px;'><p>金牛湖风景</p><img src='{% static 'img/shuiku.jpg' %}' alt='水库图片' width='600' height='330' ></div>"));
+                });
+                map.panTo(shuiKu);
+            });
+        });
+    </script>
 </body>
 </html>
