--- a/templates/user.html
+++ b/templates/user.html
@@ -9,6 +9,7 @@
     <link href="{% static 'css/bootstrap-responsive.css' %}" rel="stylesheet">
 </head>
 <body>
+<h1>this is user.html</h1>
 {% if users %}
     {% for user in users%}
         {{ for.loopcount }}
